# sitch

./: 2Z0EQBXk  Cargo.toml  README.md  sitch.json  videos.xml
src/: args.rs  formats.rs  main.rs  rss_source.rs  util.rs  youtube.rs
src/sources/: anime.rs  bandcamp.rs  manga.rs  mod.rs  rss.rs  youtube.rs
